--- a/src/components/Courses/components/CourseCard/styles.module.css
+++ b/src/components/Courses/components/CourseCard/styles.module.css
@@ -30,3 +30,9 @@
 	display: flex;
 	gap: 10px;
 }
+.authors {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 100%;
+}
